peac_dev/force-app/main/default/objects/User_PermissionSet_Assignment__mdt/User_PermissionSet_Assignment__mdt.object-meta.xml
<CustomObject>
    <label>User PermissionSet Assignment</label>
    <pluralLabel>User PermissionSet Assignments</pluralLabel>
</CustomObject>