peac_dev/force-app/main/default/objects/User_PermissionSet_Assignment__mdt/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>