peac_dev/force-app/main/default/objects/User_PermissionSet_Assignment__mdt/fields/Specific_Role_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Specific_Role_Permission_Set__c</fullName>
    <description>Store Special Permission Set based on role</description>
    <label>Specific Role Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>