peac_dev/force-app/main/default/objects/User_PermissionSet_Assignment__mdt/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>