peac_dev/force-app/main/default/objects/User_PermissionSet_Assignment__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>License_Type__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>User_Role__c</columns>
    <columns>Permission_Set_API_Name__c</columns>
    <columns>Specific_Role_Permission_Set__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>